# IOT-Final

Final_Assignment/: .gitignore  README.md  pyproject.toml
Final_Assignment/data/: cleaned_data.csv  influx_data.csv
Final_Assignment/pi_code/: final_test1.py
Final_Assignment/src/: cleandata.py  influx_utils.py  plotting.py
