[project]
name = "final-assignment"
version = "0.1.0"
description = ""
authors = [
    {name = "Giridhr10",email = "giridhr332@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "influxdb-client (>=1.48.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.2"
ipykernel = "^6.29.5"

